--- a/client/css/App.css
+++ b/client/css/App.css
@@ -8,8 +8,12 @@ body {
   align-items: center;
 }
 
-canvas {
+.canvas {
   background-color: aliceblue;
-  width: 800px;
-  height: 600px;
+  /* width: 800px;   Causes blurry canvas
+  height: 600px; */
+}
+
+.turtle-canvas {
+  position: absolute;
 }
