--- a/client/css/App.css
+++ b/client/css/App.css
@@ -1,12 +1,38 @@
 body {
   background-color: blanchedalmond;
+  margin: 0;
 }
 
 #app {
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 1vh;
+  height: 100%;
+  width: 100%;
+}
+
+.app-inner {
+  display: flex;
+  width: 100%;
+}
+
+.sidebar {
+  background-color: aliceblue;
+  overflow: hidden;
+  width: 0px;
+}
+
+.sidebar-button {
+  margin-right: -20px;
+  width: 20px;
+  height: 50px;
+}
+
+.main-app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
 
 .canvas-div {
@@ -40,6 +66,7 @@ body {
 
 .turtle-input {
   height: 80px;
+  width: 100%;
   resize: none;
 }
 
