--- a/client/css/App.css
+++ b/client/css/App.css
@@ -21,11 +21,12 @@ body {
   background-color: aliceblue;
   height: 90%;
   overflow: hidden;
-  transition: width 1s;
+  transition: min-width 1s, width 1s;
 }
 
 .sidebar-inner {
   height: 100%;
+  width: 250px;
   overflow: auto;
 }
 
@@ -43,6 +44,20 @@ button {
   width: 20px;
   height: 50px;
   z-index: 1;
+}
+
+.sidebar-tabs {
+  border-radius: 10% 10% 0% 0%;
+  width: 50%;
+  height: 25px;
+}
+
+.tab-selected {
+  background-color: aquamarine;
+}
+
+.hidden-content {
+  display: none;
 }
 
 .main-app {
