Made saved algos populate input box

--- a/client/css/App.css
+++ b/client/css/App.css
@@ -60,6 +60,10 @@ button {
   display: none;
 }
 
+.algo-item {
+  background-color: rgb(255, 255, 255);
+}
+
 .main-app {
   display: flex;
   flex-direction: column;
