--- a/client/css/App.css
+++ b/client/css/App.css
@@ -21,7 +21,8 @@ body {
   background-color: aliceblue;
   height: 90%;
   overflow: hidden;
-  transition: min-width 1s, width 1s;
+  transition: min-width 0.5s, width 0.5s;
+  z-index: 1;
 }
 
 .sidebar-inner {
@@ -36,13 +37,14 @@ button {
   border-radius: 10%;
   border-width: 1px;
   border-style: solid;
-  color: rgb(79, 79, 79);
+  color: rgb(70, 70, 70);
 }
 
 .sidebar-button {
   margin-right: -20px;
   width: 20px;
   height: 50px;
+  cursor: pointer;
   z-index: 1;
 }
 
@@ -61,7 +63,23 @@ button {
 }
 
 .algo-item {
+  display: flex;
   background-color: rgb(255, 255, 255);
+  justify-content: space-between;
+  margin: 0 0 4px 0;
+}
+
+.saved-algo-text {
+  display: inline-block;
+  width: 90%;
+  cursor: pointer;
+  background-color: #d4edf4b5;
+  border-radius: 2%;
+}
+
+.saved-algo-delete {
+  color: red;
+  cursor: pointer;
 }
 
 .main-app {
@@ -74,7 +92,7 @@ button {
 .canvas-div {
   position: relative;
   overflow: hidden;
-  object-fit: cover;
+  border-radius: 1%;
 }
 
 .turtle-canvas {
