Allowed saved algorithms to preserve newlines

--- a/client/css/App.scss
+++ b/client/css/App.scss
@@ -89,6 +89,7 @@ button:hover {
 
 .saved-algo-text {
   display: inline-block;
+  white-space: pre-wrap;
   width: 90%;
   cursor: pointer;
   background-color: #d4edf4b5;
