--- a/client/css/App.scss
+++ b/client/css/App.scss
@@ -27,6 +27,9 @@ body {
 }
 
 .sidebar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background-color: $section-background;
   height: 90%;
   overflow: hidden;
@@ -35,7 +38,6 @@ body {
 }
 
 .sidebar-inner {
-  height: 100%;
   width: 250px;
   overflow: auto;
 }
@@ -99,6 +101,11 @@ button:hover {
 .saved-algo-delete {
   color: red;
   cursor: pointer;
+}
+
+.speed-slider-div {
+  display: flex;
+  justify-content: space-evenly;
 }
 
 .main-app {
