--- a/client/css/App.scss
+++ b/client/css/App.scss
@@ -9,7 +9,7 @@ $section-background: aliceblue;
 
 body {
   background-color: $background-color;
-  color: rgb(40, 44, 45);
+  color: #0c4050;
   font-family: 'Arial';
   margin: 0;
 }
@@ -21,7 +21,6 @@ body {
 
 h1 {
   margin-top: -20px;
-  color: #0c4050;
 }
 
 #app {
@@ -35,6 +34,7 @@ h1 {
 .app-inner {
   display: flex;
   width: 100%;
+  height: 100%;
   overflow: hidden;
 }
 
@@ -51,7 +51,18 @@ h1 {
 
 .sidebar-inner {
   width: 250px;
-  overflow: auto;
+  overflow: hidden;
+  height: 100%;
+}
+
+.sidebar-content {
+  height: 100%;
+  overflow: scroll;
+}
+
+::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
 }
 
 button {
@@ -81,6 +92,7 @@ button:hover {
   border-radius: 10% 10% 0% 0%;
   width: 50%;
   height: 25px;
+  white-space: nowrap;
 }
 
 .tab-selected {
@@ -93,6 +105,23 @@ button:hover {
 
 .hidden-content {
   display: none;
+}
+
+.info-header {
+  margin: 20px 0 0 0;
+}
+
+.info-block {
+  font-size: 15px;
+  margin: 6px 0;
+}
+
+code {
+  font-size: 14px;
+}
+
+.command-name {
+  font-weight: bold;
 }
 
 .algo-item {
